# 2022-07-26

./: CMakeLists.txt  README.rst
exercises/: CMakeLists.txt  bag-copy.h  bag-unique.h  fail.cpp
livehacking/: CMakeLists.txt  demo.cpp  dummy.cpp  enum.cpp  initlist-mess.cpp  structured-binding.cpp  virtual-dtor.cpp
livehacking/smartptrs/: CMakeLists.txt  hand-written-ptr.cpp  sensors.h  shared-ptr.cpp  unique-ptr.cpp
